添加jib插件支持